[package]
name = "abci-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal ABCI skeleton that wires CometBFT to (eventually) a Reth-backed EVM execution layer."

[dependencies]
tendermint-abci = "0.31"
tendermint-proto = "0.35"
tendermint = "0.35"

# --- Reth crates ---
# IMPORTANT: Pin these to match your local reth installation.
# Example versions below may need to be adjusted (0.5.x or 1.x depending on your env).
reth = { version = "1.6", features = ["mdbx"], optional = true }
reth-evm = { version = "1.6", optional = true }
reth-primitives = { version = "1.6", optional = true }
reth-transaction-pool = { version = "1.6", optional = true }
reth-db = { version = "1.6", features = ["mdbx"], optional = true }
reth-rlp = { version = "1.6", optional = true }

anyhow = "1"
bytes = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
with-reth = ["reth", "reth-evm", "reth-primitives", "reth-transaction-pool", "reth-db", "reth-rlp"]
