[package]
name = "abci-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal ABCI skeleton that wires CometBFT to (eventually) a Reth-backed EVM execution layer."

[dependencies]
tendermint-abci = "=0.31.1"
tendermint-proto = "=0.31.1"
tendermint = "=0.31.1"

# --- Reth crates via git tag v1.6.0 ---
# Main reth crate - removed the std feature as it doesn't exist
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }

# Additional specific crates we need
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }

anyhow = "1"
bytes = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
with-reth = ["reth", "reth-evm", "reth-primitives", "reth-transaction-pool", "reth-db"]